--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react-dom": "^15.6.1",
     "react-dropzone": "^4.1.1",
     "react-scripts": "1.0.13",
+    "redux": "^3.7.2",
     "semantic-ui-react": "^0.72.0"
   },
   "scripts": {
