--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "chart.js": "^2.6.2",
     "csv": "^1.1.1",
     "csvtojson": "^1.1.7",
     "immutable": "^3.8.1",
     "react": "^15.6.1",
+    "react-chartjs-2": "^2.6.2",
     "react-dom": "^15.6.1",
     "react-dropzone": "^4.1.1",
     "react-scripts": "1.0.13",
